# epiphany-game

./: .gitignore  Makefile.am  Makefile.in  README  README.md  build.sh  clean.sh  config.h.in  configure.in
data/: Makefile.in
data/gfx/: Makefile.in
data/maps/: Makefile.in
data/sfx/: Makefile.in
include/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
