# Headers are installed with nobase_ to preserve directory structure
nobase_include_HEADERS = \
	core/dephine.h \
	core/direction.h \
	core/except.h \
	core/game.h \
	core/game_timer.h \
	core/input.h \
	core/music_manager.h \
	core/sample.h \
	core/sfx.h \
	core/epimap.h \
	core/map_editor.h \
	game_logic/entity_all.h \
	game_logic/entity_factory.h \
	game_logic/entity.h \
	game_logic/entity_manager.h \
	game_logic/entity_type.h \
	game_logic/level.h \
	game_logic/levelmap.h \
	menu/menu_entry_bool.h \
	menu/menu_entry.h \
	menu/menu_entry_ranged.h \
	menu/menu_entry_simple.h \
	menu/menu.h \
	menu/menu_list_epiphany.h \
	menu/menu_list.h \
	menu/menu_list_options.h \
	rendering/screen_coord.h \
	rendering/screen.h \
	rendering/sprite.h \
	rendering/surface.h \
	rendering/surface_manager.h \
	rendering/world_coord.h \
	config/abstract_configuration.h \
	config/commandline_configuration.h \
	config/epiconfig.h \
	config/xml_configuration.h \
	parsers/emdlparser.h \
	parsers/myparser.h \
	parsers/resource_factory.h \
	parsers/resource.h \
	entities/entity_boulder.h \
	entities/entity_brick.h \
	entities/entity_door.h \
	entities/entity_emerald.h \
	entities/entity_exit.h \
	entities/entity_explosion.h \
	entities/entity_falling.h \
	entities/entity_flintstone.h \
	entities/entity_gem.h \
	entities/entity_grass.h \
	entities/entity_key.h \
	entities/entity_monster.h \
	entities/entity_peperon.h \
	entities/entity_player.h \
	entities/entity_sapphire.h \
	entities/entity_steel.h \
	entities/entity_tomato.h \
	entities/entity_unknown.h \
	entities/entity_wood.h \
	fonts/font_factory.h \
	fonts/font.h \
	fonts/font_manager.h \
	fonts/SFont.h \
	tinyxml/tinystr.h \
	tinyxml/tinyxml.h
